[gd_scene format=3 uid="uid://ccmh3k0bumrro"]

[ext_resource type="Script" uid="uid://4wj22ryy6b1k" path="res://ui/CharacterMenu.gd" id="1_ryscx"]

[node name="CharacterMenu" type="CanvasLayer" unique_id=252957632]
visible = false
script = ExtResource("1_ryscx")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1376559709]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="." unique_id=2054413953]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel" unique_id=1847891957]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Panel/VBoxContainer" unique_id=486279901]
layout_mode = 2
text = "название персонажа"

[node name="Label2" type="Label" parent="Panel/VBoxContainer" unique_id=214560826]
layout_mode = 2
text = "уровень"

[node name="Soldier" type="Button" parent="Panel/VBoxContainer" unique_id=243423644]
layout_mode = 2
text = "Soldier"

[node name="Scout" type="Button" parent="Panel/VBoxContainer" unique_id=340548042]
layout_mode = 2
text = "Scout"

[node name="close" type="Button" parent="Panel/VBoxContainer" unique_id=2032922550]
layout_mode = 2
text = "Закрыть"

[connection signal="pressed" from="Panel/VBoxContainer/Soldier" to="." method="_on_soldier_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Scout" to="." method="_on_scout_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/close" to="." method="_on_close_pressed"]
